# xwp

./: .gitignore  LICENSE  README.md  Untitled.ipynb  compare_1d.ipynb  compare_1d_temp.ipynb  frft_test.ipynb  prop.py  pyproject.toml  setup.py  temp_1d.ipynb
.ipynb_checkpoints/: README-checkpoint.md  compare_1d-checkpoint.ipynb  compare_1d-v2-checkpoint.ipynb  compare_1d_temp-checkpoint.ipynb  frft-checkpoint.py  frft_test-checkpoint.ipynb  propagators_1d-checkpoint.py  temp_1d-checkpoint.ipynb
1d_tests/: 1d_compare_amp_phase.ipynb  1d_cython_xray.ipynb  1d_first_attempt.ipynb  1d_multi_distance.ipynb  compare_1d.ipynb  compare_1d_cython-xray_energy.ipynb  compare_1d_cython.ipynb  compare_1d_numba.ipynb  frft_test.ipynb
1d_tests/.ipynb_checkpoints/: 1d_compare_amp_phase-checkpoint.ipynb  (+10 more)
2d_tests/: 2d_exact-Copy1.ipynb  2d_exact.ipynb  2d_exact_cython.ipynb  2d_exact_cython_2_loop_parallel-Copy1.ipynb  2d_exact_cython_2_loop_parallel.ipynb  2d_exact_cython_2_loop_parallel_copy.ipynb  2d_exact_cython_4_loop.ipynb  2d_exact_numba.ipynb  2d_exact_numpy_ne.ipynb  2d_exact_vectorized.ipynb  numpy_ne_scaling.ipynb
frft/: 1d_frft_numpy_naive.ipynb  hanna_1d.ipynb
prop/: propagators_2d.py
wigner_function/: 1d_first_attempt.ipynb  complex_integration.ipynb  fft_af.ipynb  wdf_as_fft_of_af.ipynb
xray_wave_propagators/: __init__.py  fft_utils.py  propagators_1d.py
xray_wave_propagators.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xwp/: __init__.py  exact_1d.py  finite_diff_1d.py  spectral_1d.py
xwp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+203 files in other folders)
